[package]
name = "libuv"
version = "1.1.35+0"
description = "A safe rust wrapper for libuv"
homepage = "https://github.com/bmatcuk/libuv-rs"
repository = "https://github.com/bmatcuk/libuv-rs"
categories = ["command-line-interface"]
keywords = ["events", "libevent", "loop"]
readme = "README.md"
license = "MIT"
authors = ["Bob Matcuk <bmatcuk@gmail.com>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "~1.2.1"
libuv-sys2 = "~1.35.3"

[dev-dependencies]
rand = "~0.7.3"
